--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 Django==1.7.1
+dj-database-url==0.3.0
+dj-static==0.0.6
 django-braces==1.4.0
 django-cors-headers==1.0.0
 django-oauth2-provider==0.2.6.1
+django-toolbelt==0.0.1
 djangorestframework==2.4.4
 djoser==0.1.0
+gunicorn==19.3.0
 oauthlib==0.7.2
 psycopg2==2.5.4
 py-bcrypt==0.4
-requests==2.5.0
+requests==2.5.1
 shortuuid==0.4.2
 six==1.8.0
-stripe==1.19.1
+static3==0.5.1
+stripe==1.20.2
 wsgiref==0.1.2
