--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,22 @@ dj-static==0.0.6
 Django==1.8
 django-braces==1.4.0
 django-cors-headers==1.0.0
+django-oauth-plus==2.2.6
 django-oauth2-provider==0.2.6.1
 django-tinymce==1.5.3
 django-toolbelt==0.0.1
-djangorestframework==2.4.4
+djangorestframework==3.1.1
+djangorestframework-oauth==1.0.1
 djoser==0.1.0
 gunicorn==19.3.0
+httplib2==0.9.1
+oauth2==1.5.211
 oauthlib==0.7.2
 psycopg2==2.5.4
 py-bcrypt==0.4
 requests==2.5.1
 shortuuid==0.4.2
 six==1.8.0
+South==1.0.2
 static3==0.5.1
 stripe==1.20.2
