--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+boto==2.38.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8
 django-braces==1.4.0
 django-cors-headers==1.0.0
+django-herokuapp==0.9.19
 django-oauth-plus==2.2.6
 django-oauth2-provider==0.2.6.1
+django-require==1.0.7
+django-require-s3==1.0.0
+django-sslify==0.2.7
+django-storages==1.1.8
 django-tinymce==1.5.3
 django-toolbelt==0.0.1
 djangorestframework==3.1.1
@@ -17,9 +23,12 @@ oauthlib==0.7.2
 Pillow==2.8.1
 psycopg2==2.5.4
 py-bcrypt==0.4
+pytz==2015.2
 requests==2.5.1
+sh==1.11
 shortuuid==0.4.2
 six==1.8.0
 South==1.0.2
 static3==0.5.1
 stripe==1.20.2
+waitress==0.8.9
