Installed dev version of django-import-export plugin (for django 1.8 compat) 	- Set up Sample import-export admin 	- update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 boto==2.38.0
+diff-match-patch==20121119
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8
 django-braces==1.4.0
 django-cors-headers==1.0.0
 django-herokuapp==0.9.19
+django-import-export==0.2.7.dev0
 django-oauth-plus==2.2.6
 django-oauth2-provider==0.2.6.1
 django-require==1.0.7
@@ -31,4 +33,5 @@ six==1.8.0
 South==1.0.2
 static3==0.5.1
 stripe==1.20.2
+tablib==0.10.0
 waitress==0.8.9
