--- a/requirements.txt
+++ b/requirements.txt
@@ -27,12 +27,13 @@ psycopg2==2.5.4
 py-bcrypt==0.4
 pytz==2015.2
 requests==2.5.1
+sendgrid==1.4.0
 sh==1.11
 shortuuid==0.4.2
 six==1.8.0
+smtpapi==0.2.0
 South==1.0.2
 static3==0.5.1
 stripe==1.20.2
 tablib==0.10.0
 waitress==0.8.9
-
